--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -1,13 +1,8 @@
 [package]
-name = "wordle-solver"
-version = "0.1.2"
+name = "wordle-solver-data"
+version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wasm-bindgen = "*"
-wordle-solver-data = { path = "data" }
-
-[lib]
-crate-type = ["cdylib", "rlib"]
